# tapeplayer

./: .gitignore  CMakeLists.txt  CONTEXT.md  DESIGN.md  DETAILED_DESIGN.md  HARDWARE_MODULE_MIGRATION.md  PRD.md  README.md  REVIEW_REPORT.md  SESSION_SUMMARY.md  build.bat  check_adf.ps1  check_adf2.ps1  clone_adf.bat  collect_toolchain.bat  collect_toolchain.ps1  configure.bat  do_submodules.bat  extract_pdf.py  fix_idf_submodules.bat  fix_idf_submodules.ps1  fix_submodules.ps1  init_env.ps1  install_u8g2.bat  partitions.csv  partitions_ota.csv  poller.ps1  probe_build.bat  probe_mirror.ps1  rebuild.bat  rebuild2.bat  rebuild3.bat  resume_adf.ps1  run_build.bat  sdkconfig.defaults  setup_adf_submodules.ps1  开发日志.md
components/tapebook_board/: CMakeLists.txt
components/tapebook_board/tapebook_board_v1_0/: board.c  board.h  board_def.h  board_pins_config.c
components/u8g2_esp32_hal/: CMakeLists.txt  u8g2_esp32_hal.c
components/u8g2_esp32_hal/include/: u8g2_esp32_hal.h
configs/: sdkconfig.defaults.wroom-1-n16r8  sdkconfig.defaults.wroom-2-n32r16v
docs/: BT_AUDIO_PLAN.md  CODE_AUDIT_R018.md  CODE_AUDIT_R025.md  CODE_REVIEW.md  CODE_REVIEW_R018.md  CODE_REVIEW_R023.md  CODE_REVIEW_R035.md  CODE_REVIEW_R036.md  DEVELOP_STATUS.md  FIX_PLAN_R019.md  HARDWARE_PIN_WIRING.md  HARDWARE_PIN_WIRING_REVIEW.md  HARDWARE_REVIEW.md  HARDWARE_REVIEW_V1.1.md  HARDWARE_REVIEW_V1.2.md  HARDWARE_REVIEW_V1.3.md  TapeBook 播放器（ESP32-S3-WROOM-1 版）硬件方案.docx
hardware/: SCH_TapeBook_V1.0.md  SCH_TapeBook_V1.0.net  SCH_TapeBook_V1.0_BOM.csv  SCH_TapeBook_V1.2.md  SCH_TapeBook_V1.2.net  SCH_TapeBook_V1.3.md  SCH_TapeBook_V1.3.net  esp32-s3-wroom-1_wroom-1u_datasheet_cn.txt  esp32-s3-wroom-2_datasheet_cn.txt
main/: CMakeLists.txt  Kconfig.projbuild  audio_player.cpp  audio_player.h  bookmark.cpp  bookmark.h  button_manager.cpp  button_manager.h  config.h  display.cpp  display.h  idf_component.yml  main.cpp  playlist.cpp  playlist.h  power_mgmt.cpp  power_mgmt.h  settings.cpp  settings.h  tape_control.cpp  tape_control.h  voice_prompt.cpp  voice_prompt.h
tools/: _max98357a.txt  _wroom.txt  pdf_search.py
(+11 files in other folders)
